# geosafe

./: .gitignore  API_CONTRACT.md  README.md  detect.py  main.py  pyproject.toml  telemetry.db-shm  test_telemetry.py
Notebooks/: banana_disease_classifier.ipynb  cassava_disease_classifier.ipynb
backend/: FlightRecord_2026-04-28_[18-57-34].txt  main.py  pyproject.toml
backend/Notebooks/: cassava_plantain_classifier.ipynb
backend/core/: config.py
backend/models/new_models/: banana_meta.json  best.pt  cassava_meta.json
backend/pipeline/: benchmark.py  config.py  inference.py  onnx_backend.py  preprocessing.py  quality.py  saver.py
backend/routes/: flights.py  upload.py
backend/tests/: conftest.py  test_concurrent.py  test_flights.py  test_health.py  test_integration.py  test_preprocessing.py  test_utils.py  test_video.py
controllers/: capture.py  predict.py
core/: config.py  lifespan.py
database/: connector.py
dji-flight-parser/: README.md  access.md  ai.md  app.ts  index.ts  logs.ts  main.py  package.json  pyproject.toml  tables.sql
frontend/: AGENT.md  API_CONTRACT.md  Notes.md  README.md  Style.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
pipeline/: benchmark.py  config.py  metadata.py  sampler.py  tiler.py
routes/: docs.py  health.py  images.py  upload.py  videos.py
schemas/: database_schema.py
tests/: conftest.py  test_capture.py  test_docs.py  test_health.py  test_image.py  test_predict.py  test_utils.py  test_video.py
utils/: banner.py  utils.py
(+26 files in other folders)
