[project]
name = "video-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "scalar-fastapi>=1.8.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.48.0",
]
